WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
316273
bbc.com: Audio Podcast `back` 20 seconds (twice) make the player stall
https://bugs.webkit.org/show_bug.cgi?id=316273
Summary
bbc.com: Audio Podcast `back` 20 seconds (twice) make the player stall
Jean-Yves Avenard [:jya]
Reported
2026-06-03 19:46:40 PDT
Steps To Reproduce: 1. Go to bbc.com and find article with audio podcast in it (e.g.,
https://www.bbc.com/audio/play/p0nn8h78
) 2. Play audio (wait till two ads finish) and then fast forward and then audio will play (make it enough that you have option to back 20 seconds twice) 3. Now press 20 seconds backward - works 4. Press again - 20 seconds backward - no audio 5. Press again - 20 seconds backward - no audio (built-in speaker) but audio (AirPods) Results: Audio should play regardless of how many times - I do 20 seconds backward playback.
rdar://177990720
Attachments
Add attachment
proposed patch, testcase, etc.
Jean-Yves Avenard [:jya]
Comment 1
2026-06-03 19:52:48 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/66422
EWS
Comment 2
2026-06-04 02:29:43 PDT
Committed
314534@main
(ae9751dfb31a): <
https://commits.webkit.org/314534@main
> Reviewed commits have been landed. Closing PR #66422 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug